--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,8 @@
 .main{
 	text-align: center;
 	border-radius: 20px;
-	width: 350px;
+	width: 360px;
+	height: 460px;
 	margin: auto;
 	position: absolute;
 	font-family: 'SourceSansPro';
