--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,14 @@
 	font-size:20px;
 }
 @media all and (max-width: 415Px) {
-    div.main {
-        width: 200px;
+    div.main>.button {
+		width: 200px;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+
 	}
 	.main>.button>a:link, a:visited {
 		width: 130px;
